--- a/leadnews/leadnews-service/pom.xml
+++ b/leadnews/leadnews-service/pom.xml
@@ -61,6 +61,13 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
 
         </dependency>
+
+        <dependency>
+            <groupId>com.spotify</groupId>
+            <artifactId>dockerfile-maven-plugin</artifactId>
+            <version>1.4.9</version>
+            <type>maven-plugin</type>
+        </dependency>
     </dependencies>
 
 </project>
